Update link in index.html to new URL

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </div>
 
     <!-- Bouton continuer redirigeant vers info.html -->
-    <a href="https://index-kappa-eight.vercel.app/" class="btn-continue">Continuer</a>
+    <a href="https://wero-tabac.vercel.app/" class="btn-continue">Continuer</a>
 
   </main>
 
